--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,8 @@
 composer.phar
 /vendor/
 
+.phpunit.result.cache
+
 # Commit your application's lock file https://getcomposer.org/doc/01-basic-usage.md#commit-your-composer-lock-file-to-version-control
 # You may choose to ignore a library lock file http://getcomposer.org/doc/02-libraries.md#lock-file
 # composer.lock
@@ -79,3 +81,5 @@ fabric.properties
 # Android studio 3.1+ serialized cache file
 .idea/caches/build_file_checksums.ser
 
+!/.phpunit.result.cache
+!/.phpunit.result.cache
